resnax/src/resnax/ast/SketchGrammarParser.java
// Generated from SketchGrammar.g4 by ANTLR 4.7.1
package resnax.ast;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SketchGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, CC=24, CONST=25, 
		INT=26;
	public static final int
		RULE_sketch = 0, RULE_lsketch = 1, RULE_var = 2, RULE_program = 3;
	public static final String[] ruleNames = {
		"sketch", "lsketch", "var", "program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "'sketch('", "','", "')'", "'startwith('", "'endwith('", 
		"'contain('", "'optional('", "'star('", "'repeat('", "'repeatatleast('", 
		"'repeatrange('", "'concat('", "'not('", "'notcc('", "'and('", "'or('", 
		"'sep('", "'?'", "'null'", "'eps'", "',)'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"CC", "CONST", "INT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SketchGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SketchGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SketchContext extends ParserRuleContext {
		public SketchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sketch; }
	 
		public SketchContext() { }
		public void copyFrom(SketchContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndSketchContext extends SketchContext {
		public List<SketchContext> sketch() {
			return getRuleContexts(SketchContext.class);
		}
		public SketchContext sketch(int i) {
			return getRuleContext(SketchContext.class,i);
		}
		public AndSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitAndSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatAtLeastSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public TerminalNode INT() { return getToken(SketchGrammarParser.INT, 0); }
		public RepeatAtLeastSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitRepeatAtLeastSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConcatSketchContext extends SketchContext {
		public List<SketchContext> sketch() {
			return getRuleContexts(SketchContext.class);
		}
		public SketchContext sketch(int i) {
			return getRuleContext(SketchContext.class,i);
		}
		public ConcatSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitConcatSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FreeVarSketchContext extends SketchContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public FreeVarSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitFreeVarSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContainSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public ContainSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitContainSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotCCSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public NotCCSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitNotCCSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StartwithSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public StartwithSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitStartwithSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OptionalSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public OptionalSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitOptionalSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatRangeSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(SketchGrammarParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SketchGrammarParser.INT, i);
		}
		public RepeatRangeSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitRepeatRangeSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GuardedVarSketchContext extends SketchContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public LsketchContext lsketch() {
			return getRuleContext(LsketchContext.class,0);
		}
		public GuardedVarSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitGuardedVarSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrSketchContext extends SketchContext {
		public List<SketchContext> sketch() {
			return getRuleContexts(SketchContext.class);
		}
		public SketchContext sketch(int i) {
			return getRuleContext(SketchContext.class,i);
		}
		public OrSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitOrSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public TerminalNode INT() { return getToken(SketchGrammarParser.INT, 0); }
		public RepSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitRepSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public TerminalNode INT() { return getToken(SketchGrammarParser.INT, 0); }
		public RepeatSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitRepeatSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EndwithSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public EndwithSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitEndwithSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public NotSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitNotSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProgContext extends SketchContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ProgContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SepSketchContext extends SketchContext {
		public List<SketchContext> sketch() {
			return getRuleContexts(SketchContext.class);
		}
		public SketchContext sketch(int i) {
			return getRuleContext(SketchContext.class,i);
		}
		public SepSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitSepSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StarSketchContext extends SketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public StarSketchContext(SketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitStarSketch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SketchContext sketch() throws RecognitionException {
		SketchContext _localctx = new SketchContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sketch);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new ProgContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(8);
				program();
				}
				break;
			case 2:
				_localctx = new FreeVarSketchContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(9);
				var();
				}
				break;
			case 3:
				_localctx = new GuardedVarSketchContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(10);
				var();
				setState(11);
				match(T__0);
				setState(12);
				lsketch();
				setState(13);
				match(T__1);
				}
				break;
			case 4:
				_localctx = new RepSketchContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(15);
				match(T__2);
				setState(16);
				sketch();
				setState(17);
				match(T__3);
				setState(18);
				match(INT);
				setState(19);
				match(T__4);
				}
				break;
			case 5:
				_localctx = new StartwithSketchContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(21);
				match(T__5);
				setState(22);
				sketch();
				setState(23);
				match(T__4);
				}
				break;
			case 6:
				_localctx = new EndwithSketchContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(25);
				match(T__6);
				setState(26);
				sketch();
				setState(27);
				match(T__4);
				}
				break;
			case 7:
				_localctx = new ContainSketchContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(29);
				match(T__7);
				setState(30);
				sketch();
				setState(31);
				match(T__4);
				}
				break;
			case 8:
				_localctx = new OptionalSketchContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(33);
				match(T__8);
				setState(34);
				sketch();
				setState(35);
				match(T__4);
				}
				break;
			case 9:
				_localctx = new StarSketchContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(37);
				match(T__9);
				setState(38);
				sketch();
				setState(39);
				match(T__4);
				}
				break;
			case 10:
				_localctx = new RepeatSketchContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(41);
				match(T__10);
				setState(42);
				sketch();
				setState(43);
				match(T__3);
				setState(44);
				match(INT);
				setState(45);
				match(T__4);
				}
				break;
			case 11:
				_localctx = new RepeatAtLeastSketchContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(47);
				match(T__11);
				setState(48);
				sketch();
				setState(49);
				match(T__3);
				setState(50);
				match(INT);
				setState(51);
				match(T__4);
				}
				break;
			case 12:
				_localctx = new RepeatRangeSketchContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(53);
				match(T__12);
				setState(54);
				sketch();
				setState(55);
				match(T__3);
				setState(56);
				match(INT);
				setState(57);
				match(T__3);
				setState(58);
				match(INT);
				setState(59);
				match(T__4);
				}
				break;
			case 13:
				_localctx = new ConcatSketchContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(61);
				match(T__13);
				setState(62);
				sketch();
				setState(63);
				match(T__3);
				setState(64);
				sketch();
				setState(65);
				match(T__4);
				}
				break;
			case 14:
				_localctx = new NotSketchContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(67);
				match(T__14);
				setState(68);
				sketch();
				setState(69);
				match(T__4);
				}
				break;
			case 15:
				_localctx = new NotCCSketchContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(71);
				match(T__15);
				setState(72);
				sketch();
				setState(73);
				match(T__4);
				}
				break;
			case 16:
				_localctx = new AndSketchContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(75);
				match(T__16);
				setState(76);
				sketch();
				setState(77);
				match(T__3);
				setState(78);
				sketch();
				setState(79);
				match(T__4);
				}
				break;
			case 17:
				_localctx = new OrSketchContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(81);
				match(T__17);
				setState(82);
				sketch();
				setState(83);
				match(T__3);
				setState(84);
				sketch();
				setState(85);
				match(T__4);
				}
				break;
			case 18:
				_localctx = new SepSketchContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(87);
				match(T__18);
				setState(88);
				sketch();
				setState(89);
				match(T__3);
				setState(90);
				sketch();
				setState(91);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LsketchContext extends ParserRuleContext {
		public LsketchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lsketch; }
	 
		public LsketchContext() { }
		public void copyFrom(LsketchContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiSketchContext extends LsketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public LsketchContext lsketch() {
			return getRuleContext(LsketchContext.class,0);
		}
		public MultiSketchContext(LsketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitMultiSketch(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleSketchContext extends LsketchContext {
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public SingleSketchContext(LsketchContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitSingleSketch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LsketchContext lsketch() throws RecognitionException {
		LsketchContext _localctx = new LsketchContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lsketch);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new SingleSketchContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				sketch();
				}
				break;
			case 2:
				_localctx = new MultiSketchContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				sketch();
				setState(97);
				match(T__3);
				setState(98);
				lsketch();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndProgContext extends ProgramContext {
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public AndProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitAndProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EndwithProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public EndwithProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitEndwithProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StartwithProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartwithProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitStartwithProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrProgContext extends ProgramContext {
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public OrProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitOrProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstantProgContext extends ProgramContext {
		public TerminalNode CONST() { return getToken(SketchGrammarParser.CONST, 0); }
		public ConstantProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitConstantProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EmptyProgContext extends ProgramContext {
		public EmptyProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitEmptyProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StarProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StarProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitStarProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContainProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ContainProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitContainProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatAtLeastProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode INT() { return getToken(SketchGrammarParser.INT, 0); }
		public RepeatAtLeastProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitRepeatAtLeastProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CharClassProgContext extends ProgramContext {
		public TerminalNode CC() { return getToken(SketchGrammarParser.CC, 0); }
		public CharClassProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitCharClassProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConcatProgContext extends ProgramContext {
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public ConcatProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitConcatProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public NotProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitNotProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotCCProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public NotCCProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitNotCCProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SepProgContext extends ProgramContext {
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public SepProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitSepProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode INT() { return getToken(SketchGrammarParser.INT, 0); }
		public RepeatProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SketchGrammarVisitor ) return ((SketchGrammarVisitor<? extends T>)visitor).visitRepeatProg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatRangeProgContext extends ProgramContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(SketchGrammarParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SketchGrammarParser.INT, i);
		}
		public RepeatRangeProgContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
